[gd_scene load_steps=8 format=3 uid="uid://g4d4x0jdblda"]

[ext_resource type="Texture2D" uid="uid://dcix1hg57npvi" path="res://assets/sprites/ui/menus/vampyre_main_icon.png" id="1_7caxu"]
[ext_resource type="Script" path="res://scenes/ui/menus/MainMenu.gd" id="1_dpse2"]
[ext_resource type="FontFile" uid="uid://cp14d37d42e2f" path="res://assets/fonts/LanaPixel.ttf" id="3_557gi"]

[sub_resource type="Animation" id="Animation_mlqrw"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("LogoControl/Sprite2D:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, 0)]
}

[sub_resource type="Animation" id="Animation_5ic48"]
resource_name = "a"
loop_mode = 1
step = 0.05
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("LogoControl/Sprite2D:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.25, 0.5, 0.75),
"transitions": PackedFloat32Array(1, 1.03526, 1, 1),
"update": 0,
"values": [Vector2(0, 0), Vector2(0, -8), Vector2(0, 0), Vector2(0, 8)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_xu1hm"]
_data = {
"RESET": SubResource("Animation_mlqrw"),
"a": SubResource("Animation_5ic48")
}

[sub_resource type="Theme" id="Theme_mdur4"]

[node name="MainMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_dpse2")

[node name="LogoControl" type="Control" parent="."]
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="Sprite2D" type="Sprite2D" parent="LogoControl"]
texture = ExtResource("1_7caxu")
centered = false

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_xu1hm")
}
autoplay = "a"
speed_scale = 0.1

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_top = -264.0
offset_right = 282.0
grow_vertical = 0
theme_override_constants/margin_left = 64
theme_override_constants/margin_top = 64
theme_override_constants/margin_right = 64
theme_override_constants/margin_bottom = 64

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2

[node name="StartGame" type="Button" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
focus_neighbor_left = NodePath("../Exit")
focus_neighbor_top = NodePath("../Exit")
focus_neighbor_right = NodePath("../LoadGame")
focus_neighbor_bottom = NodePath("../LoadGame")
focus_next = NodePath("../LoadGame")
focus_previous = NodePath("../Exit")
theme_override_fonts/font = ExtResource("3_557gi")
theme_override_font_sizes/font_size = 22
text = "Start New Game"

[node name="LoadGame" type="Button" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
focus_neighbor_left = NodePath("../StartGame")
focus_neighbor_top = NodePath("../StartGame")
focus_neighbor_right = NodePath("../Settings")
focus_neighbor_bottom = NodePath("../Settings")
focus_next = NodePath("../Settings")
focus_previous = NodePath("../StartGame")
theme_override_fonts/font = ExtResource("3_557gi")
theme_override_font_sizes/font_size = 22
disabled = true
text = "Load Game"

[node name="Settings" type="Button" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
focus_neighbor_left = NodePath("../LoadGame")
focus_neighbor_top = NodePath("../LoadGame")
focus_neighbor_right = NodePath("../Exit")
focus_neighbor_bottom = NodePath("../Exit")
focus_next = NodePath("../Exit")
focus_previous = NodePath("../LoadGame")
theme_override_fonts/font = ExtResource("3_557gi")
theme_override_font_sizes/font_size = 22
text = "Settings
"

[node name="Exit" type="Button" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
focus_neighbor_left = NodePath("../Settings")
focus_neighbor_top = NodePath("../Settings")
focus_neighbor_right = NodePath("../StartGame")
focus_neighbor_bottom = NodePath("../StartGame")
focus_next = NodePath("../StartGame")
focus_previous = NodePath("../Settings")
theme = SubResource("Theme_mdur4")
theme_override_fonts/font = ExtResource("3_557gi")
theme_override_font_sizes/font_size = 22
text = "Exit
"

[connection signal="pressed" from="MarginContainer/VBoxContainer/StartGame" to="." method="_on_start_game_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/LoadGame" to="." method="_on_load_game_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/Settings" to="." method="_on_settings_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/Exit" to="." method="_on_exit_pressed"]
